# elka_comm

./: .gitignore  CMakeLists.txt  TODO.txt  pyelka_comm.cpp
common/: .elka.cpp.svz  .elka.h.svx  CMakeLists.txt  basic_uart.cpp  basic_uart.h  boost_uart.cpp  boost_uart.h  elka.cpp  elka.h  elka_comm.cpp  elka_comm.h  inet_comm.cpp  inet_comm.h  pyelka_common.cpp  pyelka_common.h
free_rtos/: CMakeLists.txt  elka_devices.cpp  elka_devices.h  elka_free_rtos.h
gnd_station/: CMakeLists.txt  elka_devices.cpp  elka_devices.h  inet_comm.cpp  inet_comm.h  pyelka_gnd_station.cpp  pyelka_gnd_station.h
posix/: elka_devices.cpp  elka_devices.h  elka_posix.cpp  inet_comm.cpp  inet_comm.h
qurt/: basic_uart.cpp  snapdragon_uart.cpp  snapdragon_uart_devices.cpp  snapdragon_uart_devices.h
